# ftm-translate

./: .bumpversion.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  NOTICE  README.md  VERSION  pyproject.toml  requirements-dev.txt  requirements.txt  test.txt
.github/workflows/: docker.yml  python.yml
contrib/: benchmark.py
ftm_translate/: __init__.py  cli.py  exceptions.py  logic.py  settings.py  tasks.py  test.py  util.py
ftm_translate/logic/: __init__.py  apertium.py  argos.py  base.py  translator.py
tests/: test_translate.py
