[project]
name = "ftm-translate"
version = "0.0.1"
description = "Translate FollowTheMoney Document entities via Apertium or Argos"
authors = [
    { name = "DARC", email = "hi@dataresearchcenter.org" },
    { name = "Simon Wörpel", email = "simon@dataresearchcenter.org" },
    { name = "Alex Ștefănescu", email = "alex.stefanescu@pm.me" },
]
license = "AGPLv3+"
requires-python = ">=3.11,<3.14"
dependencies = [
    "anystore (>=0.4.0,<0.5.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "ftmq (>=4.5.1,<5.0.0)",
    "rigour (>=1.6.2,<2.0.0)",
]

[project.optional-dependencies]
argos = ["argostranslate (>=1.10.0,<2.0.0)"]
openaleph = ["openaleph-procrastinate (>=5.1.3,<6.0.0)"]

[project.scripts]
ftm-translate = "ftm_translate.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
