[project]
name = "ftm-translate"
version = "0.0.1"
description = "Translate FollowTheMoney Document entities via Apertium or Argos"
authors = [
    { name = "DARC", email = "hi@dataresearchcenter.org" },
    { name = "Simon Wörpel", email = "simon@dataresearchcenter.org" },
    { name = "Alex Ștefănescu", email = "alex.stefanescu@pm.me" },
]
license = "AGPLv3+"
requires-python = ">=3.11,<3.14"
dependencies = [
    "anystore (>=1.0.1,<2.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "ftmq (>=4.5.3,<5.0.0)",
    "rigour (>=1.6.2,<2.0.0)",
    "followthemoney (>=4.5.2,<5.0.0)",
]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[project.optional-dependencies]
argos = ["argostranslate (>=1.10.0,<2.0.0)", "torch (>=2.0.0)"]
openaleph = ["openaleph-procrastinate (>=5.2.0,<6.0.0)"]
benchmark = ["nltk (>=3.9.2,<4.0.0)"]

[project.scripts]
ftm-translate = "ftm_translate.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
torch = {source = "pytorch-cpu"}

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3,<10.0.0"
pytest-cov = ">=4.1,<8.0"
pytest-env = "^1.1.1"
black = ">=23.11,<27.0"
isort = "^7.0.0"
mypy = "^1.17.1"
pre-commit = "^4.0.1"
flake8 = ">=6.1,<8.0"
ipdb = "^0.13.13"
bump2version = "^1.0.1"

[tool.pytest_env]
DEBUG = 1
